# draft-assistent

./: pyproject.toml
data/: defense.csv  offense.csv
draft_assistent/: app.py
tests/: test_draft_assistent.py
