[tool.poetry]
name = "draft-assistent"
version = "0.1.0"
description = ""
authors = ["bgs <brandon.sai@ipa.fraunhofer.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.12.2"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
